# weather-api-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
grafana/dashboards/: weather.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
src/weather_pipeline/: __init__.py  cities.py  cli.py  config.py  pipeline.py
src/weather_pipeline/api/: __init__.py  client.py  models.py
src/weather_pipeline/db/: __init__.py  models.py  repository.py  session.py
src/weather_pipeline/db/migrations/: env.py
src/weather_pipeline/db/migrations/versions/: 0001_initial.py
src/weather_pipeline/scheduler/: __init__.py  worker.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py  test_repository.py
tests/unit/: test_api_client.py  test_api_models.py  test_cities.py  test_config.py  test_pipeline.py
