[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-api-pipeline"
version = "0.1.0"
description = "Scheduled multi-city weather ingestion from Open-Meteo into PostgreSQL with Alembic migrations and Grafana dashboards."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wassim Fayala", email = "wassimfayala2@gmail.com" }]
requires-python = ">=3.11"
keywords = ["data-engineering", "etl", "scheduling", "postgres", "alembic", "grafana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
weather = "weather_pipeline.cli:app"

[project.urls]
Homepage = "https://github.com/wxssxm/weather-api-pipeline"
Repository = "https://github.com/wxssxm/weather-api-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"src/weather_pipeline/db/migrations/**/*.py" = ["E402", "F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "needs_postgres: marks tests as requiring a postgres instance",
]

[tool.coverage.run]
source = ["src/weather_pipeline"]
branch = true
omit = ["*/cli.py", "*/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
